[package]
name = "cats"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[workspace]
members = []

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
description = "A library which provides abstractions for functional programming in Rust. Inspired by Scala library cats."
categories = ["data-structures", "mathematics"]
keywords = ["functional-programming", "category-theory"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/duskmoon314/cats"

[workspace.dependencies]

# docs.rs specific configs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
