[package]
name = "cats-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
